# perso-2024b-Ivnmendes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  perso-2024b-Ivnmendes.cabal  testarApi.md
.devcontainer/: Dockerfile  devcontainer.json
doc/: README.md  comparacao.MD
src/: Main.hs
src/Config/: ConfigDb.hs  arrumaMySql.md
src/Controllers/: ProductController.hs
src/Models/: Product.hs
src/Public/Html/: index.html
src/Routes/: ProductsRoutes.hs  Routes.hs
src/Services/: ProductsServices.hs
src/Util/: Validators.hs
src/entities/: Product.hs
