cabal-version:      3.0
name:               perso-2024b-Ivnmendes
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Ivan
maintainer:         ivanmendes2005@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable perso-
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base
        ,persistent
        ,persistent-sqlite
        ,monad-control
        ,transformers
        ,mtl
        ,scotty 
        ,wai-extra 
        ,random 
        ,text
    other-modules:    
        Models.Product
        ,Services.ProductsServices
        ,Util.Validators
        ,Routes.Routes
        ,Routes.ProductsRoutes
    hs-source-dirs:   src
    default-language: Haskell2010
    
